--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
     "@htmlacademy/editorconfig-cli": "1.0.0",
     "autoprefixer": "10.4.0",
+    "babel-loader": "^8.2.5",
     "browser-sync": "2.27.7",
     "del": "6.0.0",
     "gulp": "4.0.2",
@@ -18,7 +21,9 @@
     "postcss": "8.3.11",
     "postcss-csso": "5.0.1",
     "stylelint": "13.13.1",
-    "stylelint-config-htmlacademy": "^0.1.11"
+    "stylelint-config-htmlacademy": "^0.1.11",
+    "webpack": "^5.72.0",
+    "webpack-stream": "^7.0.0"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
@@ -45,5 +50,8 @@
   "engines": {
     "node": "16.13.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "swiper": "^7.4.1"
+  }
 }
