--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "type": "module",
   "dependencies": {
+    "custom-select": "^1.1.15",
     "nouislider": "^15.6.1",
     "swiper": "^7.4.1"
   }
